--- a/css.css
+++ b/css.css
@@ -1,6 +1,6 @@
 body{
     background-size:auto;
-    background-image:url(purpi.png);    
+    background-image:url('purpi.jpg');
 }
 
 ul{            /*barra superior*/
