--- a/css.css
+++ b/css.css
@@ -1,5 +1,5 @@
 body{
-    background-image:url('purpi.jpg');
+    background-image:url(purpi.jpg);
     background-size:cover;
     background-repeat:no-repeat;
     background-attachment:fixed;
