--- a/css.css
+++ b/css.css
@@ -1,9 +1,8 @@
 body{
     background-size:auto;
-    background-image:url('purpi.png');
-
-    
+    background-image:url('purpi.jpg');
 }
+
 
 ul{            /*barra superior*/
     list-style-type: none;
