--- a/css.css
+++ b/css.css
@@ -1,6 +1,7 @@
 body{
-    background-size:auto;
+    background-size:cover;
     background-image:url('purpi.jpg');
+    background-repeat: no-repeat;
 }
 
 
