--- a/css.css
+++ b/css.css
@@ -1,8 +1,7 @@
 body{
     background-size:cover;
-    background-image:url('purpi.jpg');
+    background-image:url('purpi.png');
     background-repeat:no-repeat;
-    background-attachment:fixed;
 }
 
 
