--- a/css.css
+++ b/css.css
@@ -2,6 +2,7 @@ body{
     background-size:cover;
     background-image:url('purpi.png');
     background-repeat:no-repeat;
+    background-attachment: fixed;
 }
 
 
