--- a/css.css
+++ b/css.css
@@ -111,7 +111,7 @@ div:hover section{
     text-align:center;
     opacity:100%;
     box-shadow: inset -7px 0 9px 5px rgb(59, 50, 119);
-    
+    display:block;
 
 }
 .p1{
