--- a/css.css
+++ b/css.css
@@ -99,6 +99,7 @@ div{
 
 section{
     transition:1.3s;
+    display:none;
 
 }
 
@@ -111,7 +112,6 @@ div:hover section{
     text-align:center;
     opacity:100%;
     box-shadow: inset -7px 0 9px 5px rgb(59, 50, 119);
-    display:block;
 
 }
 .p1{
