--- a/css.css
+++ b/css.css
@@ -106,7 +106,7 @@ section{
 
 }
 
-div section:hover,div:focus{
+div:hover section,div:focus{
     background-color: rebeccapurple;   /*animaco texto*/
     margin-right: 150px;
     border-radius: 45px;
