--- a/css.css
+++ b/css.css
@@ -100,11 +100,11 @@ div{
 section{
     display:none;
     opacity: 0; /* Inicialmente, o elemento .target é invisível */
-    transition: opacity 0.3s ease; /* Adiciona uma transição de fade de 0.3 segundos */
-}
+    transition: opacity 1.3s ease; /* Adiciona uma transição de fade de 0.3 segundos */
 }
 
-div:hover section,section:focus{
+
+div:hover section{
     background-color: rebeccapurple;   /*animaco texto*/
     margin-right: 150px;
     border-radius: 45px;
