--- a/css.css
+++ b/css.css
@@ -97,11 +97,9 @@ div{
     width:150px;
 }
 
-section{
-    display:none;
+.trigger section {
     opacity: 0; /* Inicialmente, o elemento .target é invisível */
     transition: opacity 1.3s ease;
-    transition-delay:2s;/* Adiciona uma transição de fade de 0.3 segundos */
 }
 
 
@@ -112,11 +110,9 @@ div:hover section{
     width: 1000px;
     height:350px;
     text-align:center;
-    opacity:100%;
     box-shadow: inset -7px 0 9px 5px rgb(59, 50, 119);
-    display:block;
     opacity:1;
-    transition-delay:2s;
+   
 
 }
 .p1{
