--- a/css.css
+++ b/css.css
@@ -95,6 +95,7 @@ div{
     height:150px;
     box-shadow: inset -7px 0 9px 5px rgb(59, 50, 119);
     width:150px;
+    text-align:center;
 }
 
 .trigger section {
