--- a/css.css
+++ b/css.css
@@ -107,10 +107,10 @@ div{
 
 
 .trigger:hover section{
-    background-color: rebeccapurple;   /*animaco texto*/
-    margin-left: 130px;
+    background-color: slateblue;   /*animaco texto*/
+    margin-left: 140px;
     margin-right:220px;
-    margin-top:-15px;
+    margin-top:-2px;
     border-radius: 45px;
     width: 800px;
     height:250px;
